# huggingface-datasets_ukiyo-e-face-blip2-captions

./: .gitignore  README.md  pyproject.toml  ukiyo-e-face-blip2-captions.py
.github/workflows/: push_to_hub.yaml
tests/: ukiyo-e-face-blip2-captions_test.py
